k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-workshop-ingress
  namespace: k8s-workshop
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - myapp.loc
      secretName: domain-ssl-certs
  rules:
    - host: myapp.loc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-webserver-srv
                port:
                  number: 80
          #- path: /frontend-read
          #  pathType: Prefix
          #  backend:
          #    service:
          #      name: app-webserver-srv
          #      port:
          #        number: 80
#status:
#  loadBalancer:
#    ingress:
#      - hostname: localhost
